--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,19 +12,63 @@
   font-family: 'Darumadrop One', cursive;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background-image: linear-gradient(90deg, #28c7fa 0%, #1e56a0 100%);
-  background-size: 400% 400%;
-  animation: gradientAnimation 20s ease infinite;
+  /* background-color: #000; */
+  color: #ffffffe1;
+}
+
+input {
+  background-color: #ffffffe1;
+  color: #000;
+}
+
+.stars,
+.twinkling,
+.clouds {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.stars {
+  background: #000 url(/stars.png) repeat top center;
+  z-index: -20;
+}
+
+.twinkling {
+  background: transparent url(/twinkling.png) repeat top center;
+  z-index: -15;
+  animation: move-twink-back 200s linear infinite;
+}
+
+.clouds {
+  background: transparent url(/clouds.png) repeat top center;
+  z-index: -12;
+  opacity: 0.4;
+  animation: move-clouds-back 200s linear infinite;
+}
+
+@keyframes move-twink-back {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -10000px 5000px;
+  }
+}
+
+@keyframes move-clouds-back {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 10000px 0;
+  }
 }
 
 @keyframes gradientAnimation {
@@ -54,6 +98,22 @@ body {
 .gradient-button:hover {
   transform: translateY(-2px);
   box-shadow: 0px 3px 10px rgba(255, 75, 43, 0.5);
+}
+
+.spinner {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top-color: #ffffff;
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes pulse {
