--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -36,8 +36,55 @@
 }
 .lampSVG:hover svg {
   /* hover effect */
-  fill: #f1c40f;
+  fill: #c09c09;
   animation: candleFlicker 0.5s infinite;
+}
+
+.container {
+  display: grid;
+  grid-auto-flow: column;
+
+  width: 100%;
+  height: 100vh;
+}
+
+.sidebar {
+  width: 250px;
+  height: 100%;
+  overflow: auto;
+  background-color: #2b2b2b;
+  color: #fff;
+}
+
+.content {
+  width: calc(100% - 250px);
+  height: 100%;
+  overflow: auto;
+  padding: 1rem;
+}
+
+.mainList {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  text-align: left;
+  width: 100%;
+  padding: 2rem;
+  margin: 0 auto;
+  gap: 1rem;
+}
+
+.subList {
+  margin-left: 1rem;
+}
+
+.topic {
+  font-size: 1.2rem;
+}
+
+.active {
+  font-weight: bold;
 }
 
 @keyframes candleFlicker {
