--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -59,8 +59,8 @@
 .content {
   width: calc(100% - 250px);
   height: 100%;
-  overflow: auto;
   padding: 1rem;
+  margin: auto;
 }
 
 .mainList {
@@ -85,6 +85,50 @@
 
 .active {
   font-weight: bold;
+}
+
+/* responsive queries */
+
+@media (max-width: 1300px) {
+  .content {
+    padding: 0.2rem;
+    margin: 0 0 0 40px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: 250px;
+  }
+
+  .content {
+    width: 100%;
+    height: calc(100% - 250px);
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: 250px;
+  }
+
+  .content {
+    width: 100%;
+    height: calc(100% - 250px);
+    padding: 1.5rem;
+  }
 }
 
 @keyframes candleFlicker {
