--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -43,13 +43,13 @@
 .container {
   display: grid;
   grid-auto-flow: column;
+  justify-content: flex-start;
 
   width: 100%;
   height: 100vh;
 }
 
 .sidebar {
-  width: 250px;
   height: 100%;
   overflow: auto;
   background-color: #2b2b2b;
@@ -57,10 +57,8 @@
 }
 
 .content {
-  width: calc(100% - 250px);
-  height: 100%;
-  padding: 1rem;
-  margin: auto;
+  padding: 2rem 4rem;
+  max-width: 1300px;
 }
 
 .mainList {
@@ -77,6 +75,8 @@
 
 .subList {
   margin-left: 1rem;
+  display: grid;
+  gap: 0.5rem;
 }
 
 .topic {
@@ -85,6 +85,10 @@
 
 .active {
   font-weight: bold;
+}
+
+.mobileNav {
+  display: none;
 }
 
 /* responsive queries */
@@ -96,38 +100,28 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
   .container {
     display: flex;
     flex-direction: column;
   }
 
-  .sidebar {
-    width: 100%;
-    height: 250px;
-  }
-
-  .content {
-    width: 100%;
-    height: calc(100% - 250px);
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
+  .mobileNav {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem;
+    background-color: #2b2b2b;
+    color: #fff;
+    position: sticky;
   }
 
-  .sidebar {
-    width: 100%;
-    height: 250px;
-  }
-
-  .content {
-    width: 100%;
-    height: calc(100% - 250px);
-    padding: 1.5rem;
+  .menuIcon {
+    margin-right: 1rem;
+    cursor: pointer;
+    transition: all 1s ease-in-out;
   }
 }
 
