--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -30,6 +30,7 @@
   height: 30px;
   max-width: 100%;
   max-height: 100%;
+  margin-top: 0.1rem;
 }
 .lampSVG:hover {
   animation: jiggle 0.5s infinite;
@@ -43,10 +44,11 @@
 .container {
   display: grid;
   grid-auto-flow: column;
-  justify-content: flex-start;
+  justify-content: center;
+  position: relative;
 
   width: 100%;
-  height: 100vh;
+  background: #ebebeb;
 }
 
 .sidebar {
@@ -122,7 +124,6 @@
 }
 
 @keyframes candleFlicker {
-  /* candle flicker */
   0% {
     opacity: 1;
   }
@@ -135,7 +136,6 @@
 }
 
 @keyframes jiggle {
-  /* jiggle */
   0% {
     transform: rotate(-5deg);
   }
