--- a/src/components/ArticleList/ArticleList.module.css
+++ b/src/components/ArticleList/ArticleList.module.css
@@ -5,6 +5,10 @@
   background-color: rgba(255, 255, 255, 0.2) !important;
 }
 
+:global(.dark) .active {
+  background-color: rgba(100, 100, 100, 0.5) !important;
+}
+
 .icon {
   width: 30px;
   height: 100%;
@@ -14,4 +18,8 @@
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 20%;
   transition: background-color 0.2s ease-in-out;
+}
+
+:global(.dark) .icon:hover {
+  background-color: rgba(200, 200, 200, 0.3);
 }
