--- a/src/components/common/ResponsiveDrawer/ResponsiveDrawer.module.css
+++ b/src/components/common/ResponsiveDrawer/ResponsiveDrawer.module.css
@@ -1,12 +1,20 @@
 .sidebar {
   height: 100%;
   overflow: auto;
-  background-color: #2b2b2b;
-  color: #fff;
   display: grid;
   grid-template-rows: auto auto auto 1fr;
   grid-template-columns: 1fr;
   align-items: start;
   justify-content: start;
   width: 100%;
+}
+
+.darkSidebar {
+  background-color: #2b2b2b;
+  color: #fff;
+}
+
+.lightSidebar {
+  background-color: #f5f5f5;
+  color: #333;
 }
